--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,138 @@
+absl-py==1.4.0
+aiohttp==3.8.4
+aiosignal==1.3.1
 altair==4.2.2
+astunparse==1.6.3
+async-timeout==4.0.2
 attrs==23.1.0
+bcrypt==4.0.1
 blinker==1.6.2
+blis==0.7.9
 cachetools==5.3.0
+catalogue==2.0.8
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
+colorama==0.4.6
+confection==0.0.4
+contourpy==1.0.7
+cycler==0.11.0
+cymem==2.0.7
+dataclasses-json==0.5.7
 decorator==5.1.1
 entrypoints==0.4
+extra-streamlit-components==0.1.56
+fastai==2.7.12
+fastcore==1.5.29
+fastdownload==0.0.7
+fastprogress==1.0.3
+filelock==3.12.0
+flatbuffers==23.5.26
+fonttools==4.39.4
+frozenlist==1.3.3
+gast==0.4.0
 gitdb==4.0.10
 GitPython==3.1.31
+google-auth==2.19.1
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+greenlet==2.0.2
+grpcio==1.54.2
+h5py==3.8.0
 idna==3.4
 importlib-metadata==6.5.0
+jax==0.4.11
 Jinja2==3.1.2
+joblib==1.2.0
 jsonschema==4.17.3
+keras==2.12.0
+kiwisolver==1.4.4
+langchain==0.0.187
+langcodes==3.3.0
+libclang==16.0.0
+Markdown==3.4.3
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
+matplotlib==3.7.1
 mdurl==0.1.2
-numpy==1.24.2
+ml-dtypes==0.1.0
+mpmath==1.3.0
+multidict==6.0.4
+murmurhash==1.0.9
+mypy-extensions==1.0.0
+networkx==3.1
+numexpr==2.8.4
+numpy==1.23.5
+oauthlib==3.2.2
+openai==0.27.7
+openapi-schema-pydantic==1.2.4
+opt-einsum==3.3.0
 packaging==23.1
 pandas==1.5.3
+pathy==0.10.1
 Pillow==9.5.0
+preshed==3.0.8
 protobuf==3.20.3
 pyarrow==11.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pydantic==1.10.8
 pydeck==0.8.1b0
 Pygments==2.15.1
+PyJWT==2.7.0
 Pympler==1.0.1
+pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
 requests==2.28.2
+requests-oauthlib==1.3.1
 rich==13.3.4
+rsa==4.9
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
+smart-open==6.3.0
 smmap==5.0.0
+spacy==3.5.3
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+SQLAlchemy==2.0.15
+srsly==2.4.6
 streamlit==1.21.0
+streamlit-authenticator==0.2.2
+sympy==1.12
+tenacity==8.2.2
+tensorboard==2.12.3
+tensorboard-data-server==0.7.0
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+thinc==8.1.10
+threadpoolctl==3.1.0
 toml==0.10.2
 toolz==0.12.0
+torch==2.0.1
+torchvision==0.15.2
 tornado==6.3
+tqdm==4.65.0
+typer==0.7.0
+typing-inspect==0.9.0
 typing_extensions==4.5.0
 tzdata==2023.3
 tzlocal==4.3
 urllib3==1.26.15
 validators==0.20.0
+wasabi==1.1.1
 watchdog==3.0.0
+Werkzeug==2.3.4
+wrapt==1.14.1
+yarl==1.9.2
 zipp==3.15.0
